final commit for task2

--- a/task2/task2.yaml
+++ b/task2/task2.yaml
@@ -9,9 +9,8 @@ data:
     apt-get install -y git 
     apt-get install -y make
     apt-get install -y curl
-    curl -L https://github.com/gohugoio/hugo/releases/download/v0.123.4/hugo_extended_0.123.4_macOS-64bit.tar.gz -o hugo.tar.gz
-    tar -zxvf hugo.tar.gz
-    mv hugo /usr/local/bin/hugo
+    curl -L https://github.com/gohugoio/hugo/releases/download/v0.123.4/hugo_extended_0.123.4_linux-arm64.deb -o hugo.deb 
+    dpkg -i hugo.deb
     git clone https://github.com/chazapis/hy548.git
     cd hy548
     git submodule init 
@@ -23,13 +22,14 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: website-build
+  namespace: default  
 spec:
   template:
     spec:
       containers:
-      - name: website-builder
-        image: arm64v8/ubuntu:20.04
-        command: ["/bin/sh", "-c", "/config/website-script.sh"]
+      - name: website-build
+        image: ubuntu:20.04
+        command: ["/bin/sh", "-c", "bash /config/website-script.sh"]
         volumeMounts:
         - name: script-volume
           mountPath: "/config"
@@ -38,4 +38,3 @@ spec:
       - name: script-volume
         configMap:
           name: website-script
-
