--- a/task4/task4.yaml
+++ b/task4/task4.yaml
@@ -92,7 +92,7 @@ spec:
           containers:
           - name: refresh
             image: ubuntu:20.04
-            command: ["/bin/sh", "-c", " bash /config/refresh.sh"]
+            command: ["/bin/sh", "-c", "bash /config/refresh.sh"]
             volumeMounts:
             - name: config-volume
               mountPath: "/config"
@@ -102,5 +102,43 @@ spec:
           - name: config-volume
             configMap:
               name: refresh-script
-          - name: website-volume  # Define the missing volume here
-            emptyDir: {}
+          - name: website-volume  
+    
+
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: nginx-deployment
+spec:
+  selector:
+    matchLabels:
+      app: nginx
+  replicas: 3
+  template:
+    metadata:
+      labels:
+        app: nginx
+    spec:
+      initContainers:
+      - name: init-container
+        image: alpine:latest
+        command: ['sh', '-c', 'until nc -z localhost 8080; do sleep 1; done;']
+      containers:
+      - name: nginx
+        image: nginx:1.23.3-alpine
+        ports:
+        - containerPort: 80
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx-service
+spec:
+  selector:
+    app: nginx
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
